--- a/src/main/view/src/app/app.component.html
+++ b/src/main/view/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main>
 
-  <h1>view</h1>
+  <h1>vie看空间w</h1>
   <img width="200" src="https://angular.io/resources/images/logos/angular2/angular.svg">
 
   <button-timer></button-timer>
