前端打包配置

--- a/src/main/view/src/app/app.component.html
+++ b/src/main/view/src/app/app.component.html
@@ -1,7 +1,7 @@
 <main>
 
-  <h1>vie看空间w</h1>
-  <img width="200" src="https://angular.io/resources/images/logos/angular2/angular.svg">
+  <h1>view</h1>
+  <img width="200" src="../images/angular-128.png">
 
   <button-timer></button-timer>
 
